travis ci deploy added

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,15 @@ after_success:
   - docker push yakwon/docker-backend
   - docker push yakwon/docker-nginx
 
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-northeast-2"
+  app: "docker-multi-app"
+  env: "Dockermultiapp-env"
+  bucket_name: elasticbeanstalk-ap-northeast-2-562221228356
+  bucket_path: "docker-multi-app"
+  on:
+    branch: main
+
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
