--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,11 +22,11 @@ services:
       - ./backend:/app
     mem_limit: 128m
     environment: 
-      MYSQL_HOST: $MYSQL_HOST 
-      MYSQL_USER: $MYSQL_USER 
-      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
-      MYSQL_DATABASE: $MYSQL_DATABASE
-      MYSQL_PORT: $MYSQL_PORT   
+      MYSQL_HOST: mysql
+      MYSQL_USER: root 
+      MYSQL_ROOT_PASSWORD: yakwon416
+      MYSQL_DATABASE: myapp
+      MYSQL_PORT: 3306  
 
   # mysql:
   #   build: ./mysql
